--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,
 initial-scale=1.0">
-    <title>Page 1000</title>
+    <title>BTR</title>
     <link rel="icon" href="https://www.kindpng.com/picc/m/77-777374_transparent-lunch-png-icono-de-comida-png-png.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@ initial-scale=1.0">
         </div>
     </header>
     <nav>
-        <h1>Better restaurants Tucumán</h1>
+        <h1>Mejores Restaurants de Tucumán</h1>
         <ul>
             <li class="botones"><a href="#">HOME</a> </li>
             <li class="botones"><a href="#">LOCALES</a> </li>
